--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/mesosphere/${project.artifactId}.git</connection>
-        <developerConnection>scm:git:git@github.com:mesosphere/${project.artifactId}.git</developerConnection>
-        <url>http://github.com/mesosphere/${project.artifactId}/tree/master</url>
+        <connection>scm:git:git://github.com/atlassian/${project.artifactId}.git</connection>
+        <developerConnection>scm:git:git@github.com:atlassian/${project.artifactId}.git</developerConnection>
+        <url>http://github.com/atlassian/${project.artifactId}/tree/master</url>
         <tag>HEAD</tag>
     </scm>
 
