--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>mesosphere</groupId>
     <artifactId>marathon</artifactId>
-    <version>0.5.0.atlassian-1</version>
+    <version>0.5.1.atlassian-1-SNAPSHOT</version>
 
     <properties>
         <encoding>UTF-8</encoding>
